--- a/appveyor.yml
+++ b/appveyor.yml
@@ -53,6 +53,7 @@ install:
 build: false
 
 test_script:
+  - "%CMD_IN_ENV% python setup.py build_ui
   - "%CMD_IN_ENV% python -m jmbde -v tests/"
 
 skip_tags: true
