--- a/appveyor.yml
+++ b/appveyor.yml
@@ -13,10 +13,10 @@ environment:
   matrix:
     - PYTHON_VERSION: "3.7"
       PYTEST_QT_API: "pyqt5"
-      CONDA_DEPENDENCIES: "pytest pyqt=5.*"
+      CONDA_DEPENDENCIES: "pytest-qt pytest pyqt=5.*"
     - PYTHON_VERSION: "3.7"
       PYTEST_QT_API: "pyside2"
-      CONDA_DEPENDENCIES: "pytest pyside2=2.*"
+      CONDA_DEPENDENCIES: "pytest-qt pytest pyside2=2.*"
 
 matrix:
   exclude:
