Add Docker support and bump2version. Update some files.

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language: python
 python: "3.6"
 sudo: required
-dist: trusty
+dist: xenial
 
 env:
   global:
@@ -59,7 +59,7 @@ script:
       source activate test && catchsegv coverage run --source=jmbde -m pytest -v tests
     fi
 after_success:
- - coveralls
+  - coveralls
 
 # deploy:
 #  provider: pypi
