--- a/.travis.yml
+++ b/.travis.yml
@@ -34,7 +34,7 @@ install:
       sudo apt-get update
       sudo apt-get install -y xvfb herbstluftwm
       # courtesy of https://github.com/astropy/ci-helpers/blob/master/travis/setup_conda_linux.sh
-      /sbin/start-stop-daemon --start --quiet --pidfile /tmp/custom_xvfb_99.pid --make-pidfile --background --exec /usr/bin/Xvfb -- :99 -screen 0 1920x1200x24 -ac +extension GLX +render -noreset
+      # /sbin/start-stop-daemon --start --quiet --pidfile /tmp/custom_xvfb_99.pid --make-pidfile --background --exec /usr/bin/Xvfb -- :99 -screen 0 1920x1200x24 -ac +extension GLX +render -noreset
       # Setup miniconda
       wget https://repo.continuum.io/miniconda/Miniconda3-${MINICONDA_VERSION}-Linux-x86_64.sh -O miniconda.sh
       bash miniconda.sh -b -p $HOME/miniconda
