--- a/appveyor.yml
+++ b/appveyor.yml
@@ -36,13 +36,14 @@ install:
   - sh: sudo apt -y --force-yes install libglu1-mesa xvfb libgl1-mesa-dri mesa-common-dev libglu1-mesa-dev
   - sh: wget https://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh -O miniconda.sh
   - sh: bash miniconda.sh -b -p $HOME/miniconda
-  - sh: source $HOME/miniconda/bin/activate
 
   # Windows - Miniconda is in Image
   - cmd: set "PATH="C:\Miniconda3-x64;C:\Miniconda3-x64\Scripts;%PATH%"
-  - cmd: conda activate base
-  - conda config --set always_yes yes
-  - conda install -c conda-forge
+  - conda activate base
+  - conda config --set always_yes yes --set changeps1 no
+  - conda config --add channels conda-forge
+  - conda update -q conda --yes
+  - conda config --set auto_update_conda no
   - conda info
   - conda create -q -n testenv python=${PYTHON_VERSION} .-f environment.yml
   - conda activate testenv
