--- a/.travis.yml
+++ b/.travis.yml
@@ -38,8 +38,8 @@ install:
   - conda config --add channels conda-forge
   - conda update -q conda --yes
   - conda config --set auto_update_conda no
-  - conda create -q -n testenv python=${PYTHON} --file environment.yml
-  - source activate testenv
+  - conda create env --file environment.yml python=${PYTHON}
+  - conda activate testenv
   - pip install .
     - echo ${QT}
     - echo ${TEST}
