--- a/setup.cfg
+++ b/setup.cfg
@@ -34,6 +34,18 @@ classifiers=
         Programming Language :: Python :: 3.7
         Topic :: Office/Business
 
+[bdist_wheel]
+# This flag says to generate wheels that support both Python 2 and Python
+# 3. If your code will not run unchanged on both Python 2 and 3, you will
+# need to generate separate wheels for each Python version that you
+# support. Removing this line (or setting universal to 0) will prevent
+# bdist_wheel from trying to make a universal wheel. For more see:
+# https://packaging.python.org/guides/distributing-packages-using-setuptools/#wheels
+universal = 1
+
+[bdist_rpm]
+doc_files = docs AUTHORS INSTALL LICENSE README.rst
+
 [build_sphinx]
 source-dir = docs/source
 build-dir  = docs/build
@@ -105,7 +117,8 @@ ignore =
 per-file-ignores =
     # __init__ modules export names
 
-
+# pydocstyle
+# http://www.pydocstyle.org/en/latest/usage.html
 [pycodestyle]
 max-line-length=120
 exclude =
@@ -154,30 +167,31 @@ inherit = false
 ignore = D100,D203,D405
 match = .*\.py
 
-[bdist_wheel]
-# This flag says to generate wheels that support both Python 2 and Python
-# 3. If your code will not run unchanged on both Python 2 and 3, you will
-# need to generate separate wheels for each Python version that you
-# support. Removing this line (or setting universal to 0) will prevent
-# bdist_wheel from trying to make a universal wheel. For more see:
-# https://packaging.python.org/guides/distributing-packages-using-setuptools/#wheels
-universal = 1
 
-[bdist_rpm]
-doc_files = docs AUTHORS INSTALL LICENSE README.rst
 
 [options]
 setup_requires =
     twine
     wheel
 
+# isort
+# https://github.com/timothycrosley/isort/wiki/isort-Settings
 [isort]
+from_first = true
+import_heading_stdlib = Standard library imports
+import_heading_firstparty = Local imports
+import_heading_thirdparty = Third party imports
 indent = '    '
 multi_line_output = 0
 skip_glob =
 	env
 	docs
-skip = __init__.py
+known_first_party = qtsass
+known_third_party = libsass,pytest,setuptools,watchdog
+default_section = THIRDPARTY
+sections = FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
+lines_after_imports = 2
+skip = venv
 line_length = 120
 use_parentheses = True
 
