--- a/.editorconfig
+++ b/.editorconfig
@@ -17,9 +17,10 @@ indent_style = space
 indent_size = 4
 max_line_length = 119
 
-# Matches the exact files either package.json or .travis.yml
-[{package.json,.travis.yml}]
-indent_style = space
+[*.{yml,yaml}]
+indent_size = 2
+
+[*.json]
 indent_size = 2
 
 [*.scss]
