--- a/.travis.yml
+++ b/.travis.yml
@@ -36,14 +36,12 @@ install:
   - export GIT_FULL_HASH=`git rev-parse HEAD`
   - conda config --set always_yes yes --set changeps1 no
   - conda config --add channels conda-forge
+  - conda info -a # for debug reasons
   - conda update -q conda --yes
   - conda config --set auto_update_conda no
-  - conda create env --file environment.yml python=${PYTHON}
-  - conda activate testenv
-  - pip install .
-    - echo ${QT}
-    - echo ${TEST}
-    - echo ${PYTHON}
+  - conda env create -f environment.yml python=${PYTHON}
+  - source activate testenv
+  - conda list # for debug reasons
 
 before_script:
   # We need to create a (fake) display on Travis, let's use a funny resolution
@@ -120,4 +118,4 @@ deploy:
   distributions: sdist bdist_wheel
   on:
     tags: true
-    repo: jmuelbert/jmbde
+    condition: $TRAVIS_TAG =~ v[0-9]+\.[0-9]+\.[0-9]+ && $BUILD_SDIST=true
