--- a/tox.ini
+++ b/tox.ini
@@ -67,11 +67,13 @@ deps =
      -r{toxinidir}/requirements_dev.txt
 commands =
     pre-commit run --all-files --show-diff-on-failure
-    flake8 {posargs: jmbde tests }
-    pycodestyle --config={toxinidir}/setup.cfg jmbde tests
-    # pydocstyle --config={toxinidir}/setup.cfg jmbde tests
+    check-manifest {toxinidir}
+    flake8 {posargs: jmbde tests setup.py}
+    pycodestyle --config={toxinidir}/setup.cfg jmbde tests setup.py
+    pydocstyle --config={toxinidir}/setup.cfg jmbde tests setup.py
     rstcheck README.rst
-    # mypy --config={toxinidir}/setup.cfg jmbde tests
+    mypy --config={toxinidir}/setup.cfg jmbde tests
+    isort --verbose --check-only --diff --recursive jmbde tests setup.py
 
 # Documentation
 [testenv:docs]
