--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,4 +1,32 @@
 repos:
+  - repo: https://github.com/pre-commit/pre-commit-hooks
+    rev: v2.3.0
+    hooks:
+      - id: check-added-large-files
+      - id: check-ast
+      - id: check-byte-order-marker
+      - id: check-case-conflict
+      - id: check-docstring-first
+      - id: check-executables-have-shebangs
+      - id: check-json
+      - id: check-merge-conflict
+      - id: check-symlinks
+      - id: check-toml
+      - id: check-vcs-permalinks
+      - id: check-yaml
+      - id: check-xml
+      - id: debug-statements
+      - id: detect-private-key
+      - id: double-quote-string-fixer
+      - id: end-of-file-fixer
+      - id: fix-encoding-pragma
+      - id: forbid-new-submodules
+      - id: mixed-line-ending
+      - id: name-tests-test
+      - id: pretty-format-json
+      - id: requirements-txt-fixer
+      - id: trailing-whitespace
+        exclude: ^tests/fixtures/diffs/
   - repo: https://github.com/ambv/black
     rev: 18.9b0
     hooks:
@@ -15,19 +43,6 @@ repos:
     rev: v1.5.0
     hooks:
       - id: setup-cfg-fmt
-  - repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v2.1.0
-    hooks:
-      - id: trailing-whitespace
-      - id: end-of-file-fixer
-      - id: check-yaml
-      - id: debug-statements
-    language_version: python3
-  - repo: https://gitlab.com/pycqa/flake8
-    rev: 3.7.0
-    hooks:
-      - id: flake8
-    language_version: python3
   - repo: https://github.com/asottile/reorder_python_imports
     rev: v1.7.0
     hooks:
@@ -50,33 +65,7 @@ repos:
     hooks:
       - id: mypy
         args: [--no-strict-optional, --ignore-missing-imports]
-
-  - repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v2.3.0
-    hooks:
-      - id: check-added-large-files
-      - id: check-ast
-      - id: check-byte-order-marker
-      - id: check-case-conflict
-      - id: check-docstring-first
-      - id: check-executables-have-shebangs
-      - id: check-json
-      - id: check-merge-conflict
-      - id: check-symlinks
-      - id: check-toml
-      - id: check-vcs-permalinks
-      - id: check-xml
-      - id: detect-private-key
-      - id: double-quote-string-fixer
-      - id: end-of-file-fixer
-      - id: fix-encoding-pragma
-      - id: forbid-new-submodules
-      - id: mixed-line-ending
-      - id: name-tests-test
-      - id: pretty-format-json
-      - id: requirements-txt-fixer
-      - id: trailing-whitespace
-
+        exclude: ^(docs|tests/fixtures)
   - repo: local
     hooks:
       - id: rst
