--- a/requirements_dev.txt
+++ b/requirements_dev.txt
@@ -8,6 +8,7 @@
 
 asynctest==0.13.0
 black==19.3b0
+blacken-docs==1.3.0
 bump2version==0.5.11
 codecov==2.0.15
 coverage==4.5.4
@@ -30,5 +31,6 @@ pytest-timeout==1.3.3
 pytest-xvfb==1.2.0
 requests-mock==1.7.0
 rstcheck==3.3.1
+setup-cfg-fmt==1.5.0
 tox==3.14.0
 wheel==0.33.6
