--- a/requirements_dev.txt
+++ b/requirements_dev.txt
@@ -29,6 +29,7 @@ pytest-runner==5.1
 pytest-sugar==0.9.2
 pytest-timeout==1.3.3
 pytest-xvfb==1.2.0
+reorder-python-imports==1.7.0
 requests-mock==1.7.0
 rstcheck==3.3.1
 setup-cfg-fmt==1.5.0
