--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -28,7 +28,7 @@ repos:
       - id: trailing-whitespace
         exclude: ^tests/fixtures/diffs/
   - repo: https://github.com/ambv/black
-    rev: 18.9b0
+    rev: stable
     hooks:
       - id: black
         args: [--safe, --quiet]
@@ -37,12 +37,8 @@ repos:
     rev: v1.3.0
     hooks:
       - id: blacken-docs
-        additional_dependencies: [black==18.9b0]
+        additional_dependencies: [black]
         language_version: python3
-  - repo: https://github.com/asottile/setup-cfg-fmt
-    rev: v1.5.0
-    hooks:
-      - id: setup-cfg-fmt
   - repo: https://github.com/asottile/reorder_python_imports
     rev: v1.7.0
     hooks:
