--- a/.pre-commit-hooks.yaml
+++ b/.pre-commit-hooks.yaml
@@ -12,3 +12,11 @@
   entry: pydocstyle
   language: python
   types: [python]
+
+- id: setup-cfg-fmt
+  name: setup-cfg-fmt
+  description: apply a consistent format to `setup.cfg` files
+  entry: setup-cfg-fmt
+  language: python
+  language_version: python3
+  files: '(^|/)setup\.cfg$'
