--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -1,6 +1,7 @@
 [bumpversion]
-commit = True
-tag = True
+commit = False
+tag = False
+tag_name = {new_version}
 current_version = 0.1.0
 parse = (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)(\-(?P<release>[a-z]+))?
 serialize =
@@ -8,14 +9,15 @@ serialize =
 	{major}.{minor}.{patch}
 
 [bumpversion:file:setup.py]
-
 [bumpversion:file:README.rst]
+[bumpversion:file:src/jmbde/__init__.py]
+
 search = **unreleased**
 replace = **unreleased**
 	**v{new_version}**
 
 [bumpversion:part:release]
-optional_value = gamma
+optional_value = production
 values =
 	dev
-	gamma
+	production
