--- a/.coveragerc
+++ b/.coveragerc
@@ -1,8 +1,7 @@
 # .coveragerc to control coverage.py
 [run]
 branch = True
-source = jmbde/*
-omit = tests/*
+
 
 [report]
 # Regexes for lines to exclude from consideration
@@ -21,3 +20,10 @@ exclude_lines =
     # Don't complain if non-runnable code isn't run:
     if 0:
     if __name__ == .__main__.:
+
+# Paths to omit from consideration
+omit =
+    # __main__.py exists only as a very basic wrapper
+    #   and exists only to provide setuptools and python -m a place to point
+    #   at.
+    */jmbde/__main__.py
