--- a/appveyor.yml
+++ b/appveyor.yml
@@ -5,30 +5,29 @@ image:
   - Ubuntu1804
   - Visual Studio 2015
 
+# What Python version is installed where:
+# http://www.appveyor.com/docs/installed-software#python
+
 environment:
+  PYTHONUNBUFFERED: 1
+  MINICONDA: C:\\Miniconda3-x64
   matrix:
-    - PYTHON_VERSION: "3.6"
-      PYTEST_QT_API: "pyside2"
-      CONDA_DEPENDENCIES: "pytest-qt pytest pyside2=2.*"
-    - PYTHON_VERSION: "3.7"
-      PYTEST_QT_API: "pyside2"
-      CONDA_DEPENDENCIES: "pytest-qt pytest pyside2=2.*"
-    - PYTHON_VERSION: "3.8"
-      PYTEST_QT_API: "pyside2"
-      CONDA_DEPENDENCIES: "pytest-qt pytest pyside2=2.*"
+    - PYTHON: "C:\\Python34"
+      TOX_ENV: "py34"
 
-  global:
-    PYTHON: "C:\\conda"
-    CMD_IN_ENV: "cmd /E:ON /V:ON /C .\\ci-helpers\\appveyor\\windows_sdk.cmd"
-    PYTHON_ARCH:
-      "64" # needs to be set for CMD_IN_ENV to succeed. If a mix
-      # of 32 bit and 64 bit builds are needed, move this
-      # to the matrix section.
-    # Used by atropy ci-helpers
-    CONDA_CHANNELS: "conda-forge"
+    - PYTHON: "C:\\Python35"
+      TOX_ENV: "py35"
 
-platform:
-  - x64
+    - PYTHON: "C:\\Python36"
+      TOX_ENV: "py36"
+
+    - PYTHON: "C:\\Python37"
+      TOX_ENV: "py37"
+
+init:
+  - "%PYTHON%/python -V"
+  - mkdir C:\Users\appveyor\.conda
+  - call %MINICONDA%Scripts\activate.bat
 
 install:
   # Linux
@@ -36,29 +35,26 @@ install:
   - sh: sudo apt -y --force-yes install libglu1-mesa xvfb libgl1-mesa-dri mesa-common-dev libglu1-mesa-dev
   - sh: wget https://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh -O miniconda.sh
   - sh: bash miniconda.sh -b -p $HOME/miniconda
+  - sh: source "$HOME/miniconda/etc/profile.d/conda.sh"
 
-  # Windows - Miniconda is in Image
-  - cmd: set "PATH="C:\Miniconda3-x64;C:\Miniconda3-x64\Scripts;%PATH%"
-  - conda activate base
-  - conda config --set always_yes yes --set changeps1 no
-  - conda config --add channels conda-forge
-  - conda update -q conda --yes
-  - conda config --set auto_update_conda no
-  - conda info -a # for debug reasons
-  - conda env create -fcon environment.yml python=${PYTHON_VERSION}
-  - cmd: activate testenv
-  - sh: source activate testenv
-  - conda list
-  - pip install -e .
-  - pip install pytest-xvfb pytest-mock pytest-cov pytest-repeat codecov pyvirtualdisplay==0.2.1
+  - cmd: "%PYTHON%/Scripts/pip install -U --user pip"
+  - cmd: "%PYTHON%/Scripts/pip install -U --user tox wheel"
+
   - conda list # for debug reason
-  # Not a .NET project, we build in the install step instead
+
+# Not a .NET project, we build in the install step instead
 build: false
 
 test_script:
-  - tox
+  - "%PYTHON%/python -m tox -e %TOX_ENV%"
+  - tox -e docs
+
+after_test:
+  - "%PYTHON%/python setup.py bdist_wheel"
+  - ps: "ls dist"
+
+artifacs:
+  - path: dist\*
 
 on_success:
   - codecov
-
-skip_tags: true
