--- a/tox.ini
+++ b/tox.ini
@@ -1,102 +1,68 @@
-# Tox (http://tox.testrun.org/) is a tool for running tests in
-# multiple virtualenvs. To use it, "pip install tox" and then run
-# "tox" from this directory.
-
 [tox]
-envlist =py{34, 35, 36,37, 38,pypy3}, lint, cov, docs, build, release
-skip_missing_interpreters = True
+minversion = 3.4.0
+envlist =
+    docs, packaging, lint, vendoring,
+    py35,py36,py37, py38, pypy3
 
-# Tox doesn't like that we specify py3==py37
-ignore_basepython_conflict=True
+# [helpers]
+# Wrapper for calls to pip that make sure the version being used is the
+# original virtualenv (stable) version, and not the code being tested.
+# pip = python {toxinidir}/tools/tox_pip.py
 
 [testenv]
-# Most of these are defaults, but if you specify any you can't fall back
-# defaults for the others.
-# basepython =
-#    py35: python3.5
-#    py36: python3.6
-#    py37: python3.7
-#    py38: python3.8
-#    pypy: pypy
-#    pypy3: pypy3
-#    py3: python3.7
-
-passenv =
-    TOXENV
-    CI
-    CI_*
-    CIRCLECI
-    CIRCLE_*
-    TRAVIS
-    TRAVIS_*
-    APPVEYOR
-    APPVEYOR_*
-    DISPLAY
-    XAUTHORITY
-    USER
-    USERNAME
-
-usedevelop = True
+# Remove USERNAME once we drop PY2.
+passenv = CI GIT_SSL_CAINFO USERNAME
 setenv =
-    QT_API = pyside2
-# install_command = pip install -U {opts} {packages}
-install_command = pip install -U  {packages}
+    # This is required in order to get UTF-8 output inside of the subprocesses
+    # that our tests use.
+    LC_CTYPE = en_US.UTF-8
+deps = -r{toxinidir}/tools/requirements/tests.txt
+commands = pytest --timeout 300 []
+install_command = pip install {opts} {packages}
+list_dependencies_command = pip freeze --all
 
-deps =
-     -r{toxinidir}/requirements.txt
-     -r{toxinidir}/requirements_dev.txt
-commands =
-    python -V
-    pytest -vvv -qq -o console_output_style=count -p no:sugar {posargs}
+[testenv:coverage-py3]
+basepython = python3
+commands = pytest --timeout 300 --cov=pip --cov-report=term-missing --cov-report=xml --cov-report=html tests/unit {posargs}
 
-[testenv:cov]
+[testenv:docs]
+# Don't skip install here.
 deps =
-     -r{toxinidir}/requirements.txt
-     -r{toxinidir}/requirements_dev.txt
+    -rdocs/requirements.txt
+basepython = python3.7
 commands =
-    coverage run --source=src/jmbde,tests -m unittest discover -s tests/
-    coverage html
-    coverage report -m
+    sphinx-build -d {envtmpdir}/doctrees/html -b html docs/source docs/build/html
+    sphinx-build -b linkcheck -d {envtmpdir}/doctrees docs/source docs/_build/linkcheck
+    doc8 docs
+    # Having the conf.py in the docs/html is weird but needed because we
+    # can not use a different configuration directory vs source directory on RTD
+    # currently -- https://github.com/rtfd/readthedocs.org/issues/1543.
+    # That is why we have a "-c docs/html" in the next line.
+    sphinx-build -W -d {envtmpdir}/doctrees/man -b man docs/source docs/build/man -c docs/html
 
 [testenv:lint]
-install_command = pip install -U  {packages}
-deps =
-     -r{toxinidir}/requirements.txt
-     -r{toxinidir}/requirements_dev.txt
+skip_install = True
+commands_pre =
+deps = pre-commit
 commands =
-    pre-commit run --all-files --show-diff-on-failure
-    # check-manifest {toxinidir}
-    # flake8 {posargs: jmbde tests setup.py}
-    # pycodestyle --config={toxinidir}/setup.cfg jmbde tests setup.py
-    # pydocstyle --config={toxinidir}/setup.cfg jmbde tests setup.py
-    # rstcheck README.rst
-    # mypy --config={toxinidir}/setup.cfg jmbde tests
-    # isort --verbose --check-only --diff --recursive jmbde tests setup.py
+   pre-commit run [] --all-files --show-diff-on-failure
 
-# Documentation
-[testenv:docs]
-changedir = docs/source
+[testenv:vendoring]
+skip_install = True
+commands_pre =
 deps =
-    -r{toxinidir}/requirements.txt
-    -r{toxinidir}/requirements_dev.txt
-    -r{toxinidir}/docs/requirements.txt
+    invoke
+    requests
+whitelist_externals = git
 commands =
-    sphinx-build -b html -d {envtmpdir}/doctrees . {envtmpdir}/html
-    sphinx-build -b man -d {envtmpdir}/doctrees . {envtmpdir}/html
-
-# Release tooling
-[testenv:build]
-skip_install = true
-deps =
-    -r{toxinidir}/requirements.txt
-
-commands =
-    python setup.py -q setup_qt sdist bdist_wheel
+    # Check that the vendoring is up-to-date
+    invoke vendoring.update
+    git diff --exit-code
 
 [testenv:release]
-skip_install = true
+basepython = python3
 deps =
-    {[testenv:build]deps}
+    wheel
 commands =
-    {[testenv:build]commands}
-    twine check dist/*
+    python setup.py -q bdist_wheel sdist
+    twine upload --skip-existing dist/*
