Update many files. Same probs. as by jmopenorders.

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,9 +1,7 @@
 shallow_clone: false
 
 image:
-  - Ubuntu
-  - Ubuntu1804
-  - Visual Studio 2015
+  - Visual Studio 2017
 
 # What Python version is installed where:
 # http://www.appveyor.com/docs/installed-software#python
@@ -12,12 +10,6 @@ environment:
   PYTHONUNBUFFERED: 1
   MINICONDA: C:\\Miniconda3-x64
   matrix:
-    - PYTHON: "C:\\Python34"
-      TOX_ENV: "py34"
-
-    - PYTHON: "C:\\Python35"
-      TOX_ENV: "py35"
-
     - PYTHON: "C:\\Python36"
       TOX_ENV: "py36"
 
@@ -27,16 +19,9 @@ environment:
 init:
   - "%PYTHON%/python -V"
   - mkdir C:\Users\appveyor\.conda
-  - call %MINICONDA%Scripts\activate.bat
+  - call %MINICONDA%\Scripts\activate.bat
 
 install:
-  # Linux
-  - sh: sudo apt update
-  - sh: sudo apt -y --force-yes install libglu1-mesa xvfb libgl1-mesa-dri mesa-common-dev libglu1-mesa-dev
-  - sh: wget https://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh -O miniconda.sh
-  - sh: bash miniconda.sh -b -p $HOME/miniconda
-  - sh: source "$HOME/miniconda/etc/profile.d/conda.sh"
-
   - cmd: "%PYTHON%/Scripts/pip install -U --user pip"
   - cmd: "%PYTHON%/Scripts/pip install -U --user tox wheel"
 
@@ -51,9 +36,8 @@ test_script:
 
 after_test:
   - "%PYTHON%/python setup.py bdist_wheel"
-  - ps: "ls dist"
 
-artifacs:
+artifacts:
   - path: dist\*
 
 on_success:
