--- a/.travis.yml
+++ b/.travis.yml
@@ -33,11 +33,13 @@ matrix:
       env: PYTHON_VERSION=3.6
         MINICONDA_VERSION=latest
         TOX_ENV=py36
+        DISPLAY=:99.0
 
     - os: linux
       env: PYTHON_VERSION=3.7
         MINICONDA_VERSION=latest
         TOX_ENV=py37
+        DISPLAY=:99.0
 
     # Try a run on OSX
     - os: osx
@@ -69,8 +71,7 @@ install:
 
 before_script:
   - if [[ $TRAVIS_OS_NAME == "linux"]]; then
-    export DISPLAY=:99.0;
-    sh -e /etc/init.d/xvfb start;
+    "sh -e /etc/init.d/xvfb start";
     sleep 3;
     fi
 
