--- a/appveyor.yml
+++ b/appveyor.yml
@@ -39,7 +39,7 @@ install:
 build: false
 
 test_script:
-  - "python -m tox -e %TOX_ENV%"
+  # - "python -m tox -e %TOX_ENV%"
 
 after_test:
   - "python setup.py bdist_wheel"
