--- a/.travis.yml
+++ b/.travis.yml
@@ -42,9 +42,14 @@ matrix:
         MINICONDA_VERSION=latest
         TOX_ENV=py37
 
+    - os: linux
+      env: PYTHON_VERSION=3.8
+        MINICONDA_VERSION=latest
+        TOX_ENV=py38
+
     # Try a run on OSX
     - os: osx
-      osx_image: xcode11
+      osx_image: xcode9
       env: PYTHON_VERSION=3.6
         MINICONDA_VERSION=latest
         TOX_ENV=py36
@@ -55,15 +60,25 @@ matrix:
         MINICONDA_VERSION=latest
         TOX_ENV=py37
 
+    - os: osx
+      osx_image: xcode11
+      env: PYTHON_VERSION=3.8
+        MINICONDA_VERSION=latest
+        TOX_ENV=py38
+
     # Run a series of tests on Windows
-    #  - os: windows
-    #  env: PYTHON_VERSION=3.6
-    #    MINICONDA_VERSION=4.7.10
-    #    TOX_ENV=py36
+    - os: windows
+      env: PYTHON_VERSION=3.6
+        MINICONDA_VERSION=4.7.10
+        TOX_ENV=py36
     # - os: windows
     #  env: PYTHON_VERSION=3.7
     #    MINICONDA_VERSION=4.7.10
     #    TOX_ENV=py37
+
+cache:
+  directories:
+    - $HOME/.cache/pip
 
 install:
   - git clone git://github.com/astropy/ci-helpers.git
@@ -71,19 +86,11 @@ install:
   - pip install .
 
 script:
-  - if [[ $TWINE_CHECK ]]; then
-    python setup.py build sdist;
-    twine check dist/*;
-    fi
-  - if [[ $TRAVIS_OS_NAME == "linux"]]; then
-    tox -e "${TOX_ENV}";
-    fi
+  - tox -e $TOX_ENV
 
 after_success:
   - conda install -c conda-forge codecov
   - conda install conda-build anaconda-client pytest pytest-cov
-  - codecov
-  - coveralls
   - conda build recipe --no-test
   - conda install --use-local jmbde
   - conda info -a
@@ -97,4 +104,4 @@ deploy:
   distributions: sdist bdist_wheel
   on:
     tags: true
-    repo: jmuelbert/jmbde
+    repo: jmuelbert/jmbde-python
