--- a/appveyor.yml
+++ b/appveyor.yml
@@ -83,6 +83,7 @@ test_script:
   - set LINK=/LIBPATH:%cd%\lib
   - pip install -ve .
   - tox
+  - tox -e report
 
 after_test:
   - rm -rf tests/coverages
