--- a/tox.ini
+++ b/tox.ini
@@ -1,7 +1,7 @@
 [tox]
 minversion = 3.4.0
 envlist = clean, py36,py37, py38, pypy3,
-    report, packaging, lint, vendoring,
+    report, packaging, lint
 
 
 # [helpers]
@@ -64,24 +64,10 @@ deps = pre-commit
 commands =
    pre-commit run [] --all-files --show-diff-on-failure
 
-[testenv:vendoring]
-skip_install = True
-commands_pre =
-deps =
-    invoke
-    requests
-whitelist_externals = git
-commands =
-    # Check that the vendoring is up-to-date
-    invoke vendoring.update
-    git diff --exit-code
-
 [testenv:release]
 basepython = python3
 deps =
     wheel
-depends =
-    report
 commands =
     python setup.py -q bdist_wheel sdist
     twine upload --skip-existing dist/*
