--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,12 @@
 # We set the language to c because python isn't supported on the MacOS X nodes
 # on Travis. However, the language ends up being irrelevant anyway, since we
 # install Python ourselves using conda.
-language: c
+language: python
 
-os:
-  - linux
+python:
+  - "3.6"
+  - "3.7"
+  - "3.8"
 
 # Use Travis' container-based architecture
 sudo: false
@@ -56,11 +58,7 @@ script:
   - tox -e $TOX_ENV
 
 after_success:
-  - conda install -c conda-forge codecov
-  - conda install conda-build anaconda-client pytest pytest-cov
-  - conda build recipe --no-test
-  - conda install --use-local jmbde
-  - conda info -a
+  - tox -e release
 
 deploy:
   provider: pypi
