--- a/.travis.yml
+++ b/.travis.yml
@@ -3,11 +3,6 @@
 # install Python ourselves using conda.
 language: python
 
-python:
-  - "3.6"
-  - "3.7"
-  - "3.8"
-
 # Use Travis' container-based architecture
 sudo: false
 
@@ -53,6 +48,7 @@ cache:
 
 install:
   - pip install .
+  - pip install tox
 
 script:
   - tox -e $TOX_ENV
