Remove errors from travis, appveyor and tox.

--- a/tox.ini
+++ b/tox.ini
@@ -68,6 +68,7 @@ commands =
 basepython = python3
 deps =
     wheel
+    twine
 commands =
     python setup.py -q bdist_wheel sdist
-    twine upload --skip-existing dist/*
+    twine check dist/*
