--- a/.travis.yml
+++ b/.travis.yml
@@ -6,55 +6,53 @@ language: python
 # Use Travis' container-based architecture
 sudo: false
 
+services:
+  - xvfb
+
 # Turn off email notifications
 notifications:
   email: false
+
+cache:
+  directories:
+    - $HOME/.cache/pip
 
 env:
   global:
     # The following versions are the 'default' for tests, unless
     # overidden underneath. They are defined here in order to save having
     # to repeat them for all configurations.
-    - PYTHON_VERSION=3.7
     - PIP_DEPENDENCIES='tox'
-    - MINICONDA_VERSION=latest
     - DISPLAY=":99.0"
 
-services:
-  - xvfb
-
-matrix:
-  fast_finish: true
+jobs:
   include:
-    # Try a run on Linux
-    - os: linux
-      env: PYTHON_VERSION=3.6
-        MINICONDA_VERSION=latest
-        TOX_ENV=py36
+    - name: "Python 3.8.0 on Bionic Linux"
+      python: 3.8 # this works for Linux but is ignored on macOS or Windows
+    - name: "Python 3.6.0 on Xenial Linux"
+      python: 3.6
 
-    - os: linux
-      env: PYTHON_VERSION=3.7
-        MINICONDA_VERSION=latest
-        TOX_ENV=py37
-
-    - os: linux
-      env: PYTHON_VERSION=3.8
-        MINICONDA_VERSION=latest
-        TOX_ENV=py38
-
-cache:
-  directories:
-    - $HOME/.cache/pip
+    - name: "Python 3.7.4 on macOS"
+      os: osx
+      osx_image: xcode11.2 # Python 3.7.4 running on macOS 10.14.4
+      language: shell # 'language: python' is an error on Travis CI macOS
+    - name: "Python 3.8.0 on Windows"
+      os: windows
+      before_install:
+        - choco install python --version 3.8.0
+        - python -m pip install --upgrade PIP_DEPENDENCIES='tox'
+      env: PATH=/c/Python38:/c/Python38/Scripts:$PATH
 
 install:
-  - pip install .
-  - pip install tox
+  - pip3 install --upgrade pip # all three OSes agree about 'pip3'
+  - pip3 install tox
 
 script:
   - tox -e $TOX_ENV
 
 after_success:
   - tox -e release
+  - tox -e report
 
 deploy:
   provider: pypi
