--- a/.travis.yml
+++ b/.travis.yml
@@ -29,24 +29,25 @@ jobs:
   include:
     - name: "Python 3.8.0 on Bionic Linux"
       python: 3.8 # this works for Linux but is ignored on macOS or Windows
-      TOX_ENV: py38
+      env: TOX_ENV=py38
     - name: "Python 3.6.0 on Xenial Linux"
       python: 3.6
-      TOX_ENV: py36
+      env: TOX_ENV=py36
 
     - name: "Python 3.7.4 on macOS"
       os: osx
       osx_image: xcode11.2 # Python 3.7.4 running on macOS 10.14.4
       language: shell # 'language: python' is an error on Travis CI macOS
-      TOX_ENV: py37
+      env: TOX_ENV=py37
 
     - name: "Python 3.8.0 on Windows"
       os: windows
       before_install:
         - choco install python --version 3.8.0
         - python -m pip install --upgrade PIP_DEPENDENCIES='tox'
-      env: PATH=/c/Python38:/c/Python38/Scripts:$PATH
-      TOX_ENV: py38
+      env:
+        - PATH=/c/Python38:/c/Python38/Scripts:$PATH
+        - TOX_ENV=py38
 
 install:
   - pip3 install --upgrade pip # all three OSes agree about 'pip3'
