travis - add the forgotten semicolon. appveyor set the path to miniconda.

--- a/.travis.yml
+++ b/.travis.yml
@@ -56,7 +56,7 @@ install:
 
 script:
   - if [["$TRAVIS_OS_NAME" == "linux"]]; then
-    tox -e $TOX_ENV
+    tox -e $TOX_ENV;
     fi
 
 after_success:
