--- a/.travis.yml
+++ b/.travis.yml
@@ -61,7 +61,9 @@ script:
 
 after_success:
   - tox -e release
-  - tox -e report
+  - if [["$TRAVIS_OS_NAME" == "linux"]]; then
+    tox -e report
+    fi
 
 deploy:
   provider: pypi
