--- a/appveyor.yml
+++ b/appveyor.yml
@@ -25,10 +25,12 @@ environment:
     # In theory we could use a single CONDA_INSTALL_LOCN because we construct
     # the envs anyway. But using one for the right python version hopefully
     # making things faster due to package caching.
-    - PYTHON_VERSION: "3.7"
-      CONDA_INSTALL_LOCN: "C:\\Miniconda3-x64"
+    - PYTHON_VERSION: "3.6"
+      CONDA_INSTALL_LOCN: "C:\\Miniconda36-x64"
       TEST_ALL: "no"
-      TOXENV: py38
+    - PYTHON_VERSION: "3.7"
+      CONDA_INSTALL_LOCN: "C:\\Miniconda37-x64"
+      TEST_ALL: "no"
 
       # We always use a 64-bit machine, but can build x86 distributions
 # with the PYTHON_ARCH variable
