--- a/appveyor.yml
+++ b/appveyor.yml
@@ -90,11 +90,11 @@ after_test:
   # - codecov
   - if exist coverage.xml (cp coverage.xml dist\) else (echo no coverage.xml)
   - "python setup.py bdist_wheel"
-  - conda install -c conda-forge codecov
-  - conda install conda-build anaconda-client pytest pytest-cov
-  - conda build recipe --no-test
-  - conda install --use-local jmbde
-  - conda info -a
+  # - conda install -c conda-forge codecov
+  # - conda install conda-build anaconda-client pytest pytest-cov
+  # - conda build recipe --no-test
+  # - conda install --use-local jmbde
+  # - conda info -a
 
 artifacts:
   - path: dist\*
