--- a/tox.ini
+++ b/tox.ini
@@ -21,8 +21,8 @@ deps =
     -r{toxinidir}/requirements.txt
     -r{toxinidir}/requirements_dev.txt
 depends =
-    {py36, py38}: clean
-    report: py36, py38
+    {py36, py37, py38}: clean
+    report: py36, py37, py38
 setenv =
     # This is required in order to get UTF-8 output inside of the subprocesses
     # that our tests use.
@@ -46,7 +46,7 @@ commands = coverage erase
 # Don't skip install here.
 deps =
     -r{toxinidir}/docs/requirements.txt
-basepython = python3.7
+basepython = python3
 commands =
     sphinx-build -d {envtmpdir}/doctrees/html -b html docs/source docs/build/html
     sphinx-build -b linkcheck -d {envtmpdir}/doctrees docs/source docs/_build/linkcheck
