--- a/.travis.yml
+++ b/.travis.yml
@@ -47,7 +47,7 @@ jobs:
       language: shell
       before_install:
         - choco install python --version 3.8.0
-        - python -m pip install --upgrade PIP_DEPENDENCIES='tox'
+        - python -m pip install --upgrade pip
       env:
         - PATH=/c/Python38:/c/Python38/Scripts:$PATH
         - TOX_ENV=py38
@@ -57,10 +57,10 @@ jobs:
       language: shell
       before_install:
         - choco install pypy3
-        - python -m pip install --upgrade PIP_DEPENDENCIES='tox'
+        - python -m pip install --upgrade pip
       env:
         - PATH=/c/Python38:/c/Python38/Scripts:$PATH
-        - TOX_ENV=py38
+        - TOX_ENV=pypy3
 
 install:
   - pip3 install --upgrade pip # all three OSes agree about 'pip3'
