--- a/.travis.yml
+++ b/.travis.yml
@@ -57,7 +57,7 @@ jobs:
       language: shell
       before_install:
         - choco install pypy3
-        - python -m pip install --upgrade pip
+        - pip3 install --upgrade pip
       env:
         - PATH=/c/Python38:/c/Python38/Scripts:$PATH
         - TOX_ENV=pypy3
