--- a/appveyor.yml
+++ b/appveyor.yml
@@ -7,34 +7,34 @@ environment:
     CMD_IN_ENV: "cmd /E:ON /V:ON /C .\\appveyor\\run_with_env.cmd"
 
   matrix:
+    # TODO: Ty 3.8 pytest-qt dont find Pyside2
+    # - PYTHON: "C:\\Python38"
+    #  PYTHON_VERSION: "3.8.x" # currently 3.8.0
+    #  PYTHON_ARCH: "32"
+    #  TOXENV: "py38"
 
-    - PYTHON: "C:\\Python38"
-      PYTHON_VERSION: "3.8.x" # currently 3.6.5
-      PYTHON_ARCH: "32"
-      TOXENV: "py38"
-
-    - PYTHON: "C:\\Python38-x64"
-      PYTHON_VERSION: "3.8.x" # currently 3.6.5
-      PYTHON_ARCH: "64"
-      TOXENV: "py38"
+    # - PYTHON: "C:\\Python38-x64"
+    #  PYTHON_VERSION: "3.8.x" # currently 3.8.0
+    #  PYTHON_ARCH: "64"
+    #   TOXENV: "py38"
 
     - PYTHON: "C:\\Python37"
-      PYTHON_VERSION: "3.7.x" # currently 3.6.5
+      PYTHON_VERSION: "3.7.x" # currently 3.7.5
       PYTHON_ARCH: "32"
       TOXENV: "py37"
 
     - PYTHON: "C:\\Python37-x64"
-      PYTHON_VERSION: "3.6.x" # currently 3.6.5
+      PYTHON_VERSION: "3.7.x" # currently 3.7.5
       PYTHON_ARCH: "64"
       TOXENV: "py37"
 
     - PYTHON: "C:\\Python36"
-      PYTHON_VERSION: "3.6.x" # currently 3.6.5
+      PYTHON_VERSION: "3.6.x" # currently 3.6.8
       PYTHON_ARCH: "32"
       TOXENV: "py36"
 
     - PYTHON: "C:\\Python36-x64"
-      PYTHON_VERSION: "3.6.x" # currently 3.6.5
+      PYTHON_VERSION: "3.6.x" # currently 3.6.8
       PYTHON_ARCH: "64"
       TOXENV: "py36"
 
