--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,35 +1,23 @@
 {
-  "python.pythonPath": "/Users/juergen/miniconda/envs/develop/bin/python",
   "python.linting.pylintEnabled": true,
-  "python.linting.pylintArgs": [
-    "--reports",
-    "12",
-    "--disable-msg",
-    "I0011"
-  ],
+  "python.linting.pylintArgs": ["--reports", "12", "--disable-msg", "I0011"],
   "python.linting.flake8Enabled": true,
-  "python.linting.flake8Args": [
-    "--ignore=E24,W504",
-    "--verbose"
-  ],
+  "python.linting.flake8Args": ["--ignore=E24,W504", "--verbose"],
   "python.linting.pycodestyleEnabled": false,
   "python.linting.pydocstyleEnabled": true,
-  "python.linting.pydocstyleArgs": [
-    "--ignore=D400",
-    "--ignore=D4"
-  ],
+  "python.linting.pydocstyleArgs": ["--ignore=D400", "--ignore=D4"],
   "python.linting.enabled": true,
   "python.linting.lintOnSave": true,
   "python.formatting.provider": "autopep8",
   "python.testing.pytestEnabled": true,
   "python.testing.nosetestsEnabled": false,
-  "qtForPython.path.designer": "${env:HOME}/Qt/5.12.3/clang_64/bin/Designer",
-  "qtForPython.path.linguist": "${env:HOME}/Qt/5.12.3/clang_64/bin/Linguist",
-  "qtForPython.path.lrelease": "${env:HOME}/Qt/5.12.3/clang_64/bin/lrelease",
+  "qtForPython.path.designer": "${env:HOME}/Qt/5.14.2/clang_64/bin/Designer/Contents/MacOS/Designer",
+  "qtForPython.path.linguist": "${env:HOME}/Qt/5.14.2/clang_64/bin/Linguist/Contents/MacOS/Linguist",
+  "qtForPython.path.lrelease": "${env:HOME}/Qt/5.14.2/clang_64/bin/lrelease",
   "qtForPython.path.pylupdate": "",
   "qtForPython.path.pyrcc": "",
   "qtForPython.path.pyuic": "",
-  "qtForPython.path.qmlscene": "${env:HOME}/Qt/5.12.3/clang_64/bin/qmlscene --verbose ${file}",
+  "qtForPython.path.qmlscene": "${env:HOME}/Qt/5.14.2/clang_64/bin/qmlscene --verbose ${file}",
   "pyside2-vsc.designer-creator.path": "",
   "pyside2-vsc.rcc.cmd": "pyside2-rcc",
   "pyqt-integration.linguist.cmd": "linguist",
@@ -61,6 +49,5 @@
   "editor.suggest.localityBonus": true,
   "editor.suggestSelection": "recentlyUsed",
   "editor.wordBasedSuggestions": true,
-  "editor.parameterHints.enabled": true,
-  "python.testing.unittestEnabled": false
+  "editor.parameterHints.enabled": true
 }
