--- a/mypy.ini
+++ b/mypy.ini
@@ -24,3 +24,13 @@ disallow_untyped_decorators = False
 
 [mypy-pytest]
 ignore_missing_imports = True
+
+[mypy-jmbde.*]
+ignore_missing_imports = True
+ignore_errors = True
+
+[mypy-faker]
+ignore_missing_imports = True
+
+[mypy-openpyxl]
+ignore_missing_imports = True
