--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,79 +1,51 @@
-default_language_version:
-  python: python3
-
-default_stages: [commit, push]
-
 repos:
-  - repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v3.1.0
-    hooks:
-      - id: check-yaml
-        args: ["--allow-multiple-documents"]
-        exclude: ^.*(\recipe/meta.yaml|\.idea)$
-      - id: sort-simple-yaml
-      - id: check-added-large-files
-        args: ["--maxkb=150"]
-      - id: check-ast
-      - id: check-builtin-literals
-      - id: check-byte-order-marker
-        exclude: ^.*(\.cbproj|\.groupproj|\.props|\.sln|\.vcxproj|\.vcxproj.filters)$
-      - id: check-case-conflict
-      - id: detect-private-key
-      - id: check-docstring-first
-      - id: check-executables-have-shebangs
-      - id: check-toml
-      - id: check-json
-      - id: pretty-format-json
-        args: ["--autofix"]
-        exclude: .vscode/*
-      - id: check-xml
-      - id: check-merge-conflict
-      - id: check-symlinks
-      - id: check-vcs-permalinks
-      - id: debug-statements
-      - id: end-of-file-fixer
-        stages:
-          - commit
-          - manual
-        exclude: ^.*(\src/jmbde/ui/*.py)$
-      - id: file-contents-sorter
-      - id: fix-encoding-pragma
-      - id: forbid-new-submodules
-      - id: mixed-line-ending
-      - id: trailing-whitespace
-        args: [--markdown-linebreak-ext=md]
-        exclude: ^.*(\src/jmbde/ui/*.py)$
-        stages:
-          - commit
-          - manual
-      - id: no-commit-to-branch
-        args: [--branch, develop]
-
-  - repo: https://github.com/prettier/prettier
-    rev: 2.0.5
-    hooks:
-      - id: prettier
-
-  - repo: https://github.com/psf/black
-    rev: 19.10b0
+  - repo: local
     hooks:
       - id: black
-
-  - repo: https://gitlab.com/pycqa/flake8
-    rev: 3.8.3
-    hooks:
+        name: black
+        entry: black
+        language: system
+        types: [python]
+        require_serial: true
+      - id: check-added-large-files
+        name: Check for added large files
+        entry: check-added-large-files
+        language: system
+      - id: check-toml
+        name: Check Toml
+        entry: check-toml
+        language: system
+        types: [toml]
+      - id: check-yaml
+        name: Check Yaml
+        entry: check-yaml
+        language: system
+        types: [yaml]
+      - id: end-of-file-fixer
+        name: Fix End of Files
+        entry: end-of-file-fixer
+        language: system
+        types: [text]
+        stages: [commit, push, manual]
       - id: flake8
-        additional_dependencies:
-          - flake8-absolute-import
-          - flake8-bandit==2.1.2
-          - flake8-bugbear==20.1.4
-          - flake8-docstrings==1.5.0
-          - flake8-rst-docstrings==0.0.13
-          - pep8-naming==0.10.0
-          - darglint==1.4.1
-
-  - repo: https://github.com/asottile/reorder_python_imports
-    rev: v2.3.0
-    hooks:
+        name: flake8
+        entry: flake8
+        language: system
+        types: [python]
+        require_serial: true
       - id: reorder-python-imports
+        name: Reorder python imports
+        entry: reorder-python-imports
+        language: system
+        types: [python]
         args: [--application-directories=src]
+      - id: trailing-whitespace
+        name: Trim Trailing Whitespace
+        entry: trailing-whitespace-fixer
+        language: system
+        types: [text]
+        stages: [commit, push, manual]
+  - repo: https://github.com/prettier/prettier
+    rev: 2.1.1
+    hooks:
+      - id: prettier
