--- a/.gitignore
+++ b/.gitignore
@@ -32,6 +32,10 @@ pip-wheel-metadata/
 *.manifest
 *.spec
 
+# Poetry lock
+# ignore the poetry lock file
+poetry.lock
+
 # Installer logs
 pip-log.txt
 pip-delete-this-directory.txt
